--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "15.4.2",
     "normalize-scss": "^8.0.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-loader-spinner": "^6.1.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
